# rcr

./: Cargo.toml  config.toml  todo.md
macros/src/: lib.rs
src/: config.rs  http.rs  main.rs  widgets.rs
src/widgets/: button.rs  container.rs
static/: index.html
